--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,12 +1,12 @@
 /* Navigation Styles */
 /* Header */
 .Footer {
-  position: absolute;
+  position: relative;
   width: 100%;
   background: indianred;
   height: 50px;
   line-height: 50px;
-  bottom:0
+  bottom: 0;
 }
 
 .Wrap {
@@ -19,7 +19,7 @@
   font-family: inherit;
   font-size: 1.5em;
   margin-left: 1em;
-  margin-top:0;
+  margin-top: 0;
 }
 .Logo a {
   color: #fff;
