--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,12 +1,11 @@
 /* Navigation Styles */
 /* Header */
 .Footer {
-  position: relative;
-  width: 100%;
   background: indianred;
-  height: 50px;
+  color: white;
   line-height: 50px;
-  bottom: 0;
+  padding: 0 20px;
+  height: 50px;
 }
 
 .Wrap {
